src/main/java/org/example/moviesplatform/error/model/DirectorNotFoundException.java
package org.example.moviesplatform.error.model;

public class DirectorNotFoundException extends RuntimeException {
    public DirectorNotFoundException(String message) {
        super(message);
    }
}